[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moltrust-crewai"
version = "0.1.1"
description = "MolTrust trust verification middleware for CrewAI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lars Kersten Kroehl", email = "kersten.kroehl@cryptokri.ch" }]
keywords = ["crewai", "moltrust", "agent", "trust", "guardrail", "middleware", "ai-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = [
  "requests>=2.28",
  "crewai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://moltrust.ch"
Repository = "https://github.com/MoltyCel/moltrust-crewai"
Issues = "https://github.com/MoltyCel/moltrust-crewai/issues"

[tool.hatch.build.targets.wheel]
packages = ["moltrust_crewai"]
